Commented input.js, updated login packages, aligned login widget to the left, added Facebook and Google login

--- a/client/components/message.html
+++ b/client/components/message.html
@@ -9,6 +9,7 @@
 
 		<a href="/channel/{{ timestampToTime timestamp }}" class="message_username">{{usernameFromId user}}</a>
 
+		<!--<span class="message_timestamp">{{timestampToTime timestamp}}</span>-->
 		<span class="message_timestamp">{{timestampToTime timestamp}}</span>
 		<span class="message_star"></span>
 		<span class="message_content">{{text}}</span>
